Adding drl file with default rules

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,16 @@
     <artifactId>bajno.domalewski.BiedronkaBilds</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+  <dependencies>
+    <dependency>
+        <groupId>org.kie</groupId>
+        <artifactId>kie-ci</artifactId>
+        <version>7.1.0.Beta1</version>
+    </dependency>
+    <dependency>
+        <groupId>org.drools</groupId>
+        <artifactId>drools-decisiontables</artifactId>
+        <version>7.1.0.Beta1</version>
+    </dependency>
+  </dependencies>
 </project>
