--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,11 @@
         <artifactId>drools-decisiontables</artifactId>
         <version>7.1.0.Beta1</version>
     </dependency>
+
   </dependencies>
+
+    <properties>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
+    </properties>
 </project>
